Refactoring cost-effectiveness, part VII